# dbt-cost

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: dbt-cost-pr.yml
src/dbt_cost/: __main__.py  cli.py
src/dbt_cost/adapters/: bigquery.py
src/dbt_cost/commands/: diff.py  estimate.py  report.py
src/dbt_cost/core/: adapter.py  calculator.py  diff_engine.py  selector.py
src/dbt_cost/output/: json_output.py  markdown.py  terminal.py
tests/: conftest.py  test_adapter_bigquery.py  test_calculator.py  test_diff_engine.py  test_selector.py
tests/fixtures/: small_manifest.json  small_manifest_modified.json
tests/test_commands/: test_diff.py  test_estimate.py  test_report.py
